# super_om_nom

./: Cargo.toml  build.sh
.github/workflows/: release.yaml
design thoughts/: an_old_idea_about_forces.md  ideas.md  notes.md  todo  todo.md
src/: basic_character.rs  basic_selection_and_dropping.rs  main.rs  playground.rs
wasm/: bevy_game.js  index.html  restart-audio-context.js  styles.css  super_om_nom.js
