[package]
name = "super_om_nom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bevy-inspector-egui = "0.23.4"
bevy_mod_picking = "0.18.1"
bevy_xpbd_2d = "0.4.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "basic_selection"
path = "src/basic_selection_and_dropping.rs"

[[example]]
name = "basic_character"
path = "src/basic_character.rs"

[[example]]
name = "playground"
path = "src/playground.rs"

