[package]
name = "super_om_nom"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "playground"
main = "src/playground.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = "0.13.0"
bevy-inspector-egui = "0.23.4"
bevy_mod_picking = "0.18.1"
bevy_xpbd_2d = "0.4.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "basic_selection"
path = "src/bin/basic_selection_and_dropping.rs"

[[example]]
name = "basic_character"
path = "src/bin/basic_character.rs"

[[example]]
name = "playground"
path = "src/bin/playground.rs"

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true